@@ -1,5 +1,6 @@
 to be 0.3.4
 - added with_prev()
+- added iterable()
 - more docs
 
 0.3.3
